core-apps/base/container-registry/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: harbor.blanktorious.com
  namespace: harbor
spec:
  routes:
  - kind: Rule
    match: Host(`harbor.blanktorious.com`) && PathPrefix(`/`)
    priority: 1
    services:
      - kind: Service
        name: harbor-portal
        namespace: harbor
        port: 80
  - kind: Rule
    match: Host(`harbor.blanktorious.com`) && PathPrefix(`/c/`)
    priority: 10
    services:
      - kind: Service
        name: harbor-core
        namespace: harbor
        port: 80
  - kind: Rule
    match: Host(`harbor.blanktorious.com`) && PathPrefix(`/api/`)
    priority: 10
    services:
      - kind: Service
        name: harbor-core
        namespace: harbor
        port: 80
  - kind: Rule
    match: Host(`harbor.blanktorious.com`) && PathPrefix(`/service/`)
    priority: 10
    services:
      - kind: Service
        name: harbor-core
        namespace: harbor
        port: 80
  - kind: Rule
    match: Host(`harbor.blanktorious.com`) && PathPrefix(`/v2/`)
    priority: 10
    services:
      - kind: Service
        name: harbor-core
        namespace: harbor
        port: 80
  - kind: Rule
    match: Host(`harbor.blanktorious.com`) && PathPrefix(`/chartrepo/`)
    priority: 10
    services:
      - kind: Service
        name: harbor-core
        namespace: harbor
        port: 80
#  tls:
#    certResolver: letsencrypt-prod
